Scroll bar, and fixed desktop overflow-x issue causing page to be under the scroll bar. NTS, max-width 100%

--- a/spotify/sass/style.sass
+++ b/spotify/sass/style.sass
@@ -13,6 +13,7 @@ $bg__1--lg: url('../public/bglg.jpg')
     --headerBackground: ''
     --headerHeight: 0
 
+
 @mixin opacTransition
     opacity: 0
     transition: opacity .75s ease-in-out
@@ -84,6 +85,15 @@ $bg__1--lg: url('../public/bglg.jpg')
     scroll-behavior: smooth
     -webkit-scroll-behavior: smooth
 
+::-webkit-scrollbar 
+    width: .5rem
+::-webkit-scrollbar-track 
+::-webkit-scrollbar-thumb 
+    @include scrimGradient($white, 'to top')
+    border-bottom-right-radius: 25%
+    border-bottom-left-radius: 25%
+
+
 button, input[type="submit"], input[type="reset"]
     background: none
     color: inherit
@@ -99,7 +109,8 @@ button, input[type="submit"], input[type="reset"]
 body
     background: $black
     font-family: 'Rubik', sans-serif
-    max-width: 100vw
+    min-height: 100vh
+    max-width: 100%
 a
     color: inherit
     text-decoration: none
@@ -113,13 +124,10 @@ i
     overflow: hidden
 
 .container
-
     display: flex
     justify-content: center
     align-items: center
-    min-height: 100vh
-    min-width: 100vw
-    max-width: 100vw
+
     &--overlay
         @include overlay
         &::before
@@ -128,10 +136,8 @@ i
 
 .dashboard
     @include overlay
-
     display: flex
     min-height: 100vh
-    min-width: 100vw
     flex-direction: column
     width: 100%
 
@@ -599,9 +605,12 @@ i
     justify-content: space-between
     min-height: 12rem
     padding: 0 1rem
+    width: auto
     &__title
-        flex: 1 0 100%
         @include sectionTitle
+        flex: 1 0 100%
+        padding: 1rem 0
+        max-width: 100%
     
 .tab
     align-items: center
